--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="shortcut icon" href="images/favicon.ico" />
     <title>Wrath Social | Arena Point Calculator</title>
 </head>
 
@@ -19,56 +20,66 @@
             </div>
         </div>
         <div class="row mt-3" id="disclaimerWarningWrapper">
-            <div class="col col-12">
-                <div class="alert alert-danger">
-                    <div class="row">
-                        <div class="col col-12" id="disclaimerWarningText">
-                            <span>These calculations are an estimate and are subject to change throughout the
-                                expansion. Please contact administrators if you encounter inconsistencies.</span>
-                        </div>
-                    </div>
-                    <div class="row mt-2">
-                        <div class="col col-12" id="dismissDisclaimerWrapper">
-                            <button class="btn btn-danger" id="dismissDisclaimerWarning">Dismiss</button>
-                        </div>
-                    </div>
-                </div>
+            <div class="col col-12 alert alert-danger">
+                <span>These calculations are an estimate and are subject to change.</span>
             </div>
         </div>
-
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col col-6 flex-col">
+                <h2>
+                    Arena Rating
+                </h2>
+            </div>
+            <div class="col col-6 flex-col">
+                <h2>
+                    Points
+                </h2>
+            </div>
+        </div>
     </div>
     <div class="container mt-5" id="arenaCalcWrapper">
         <div class="row my-2">
-            <h3>2s</h3>
+            <div class="col col-12 flex-col">
+                <h3>2s</h3>
+                <img class="arena-points-icon" src="./images/Arena_Points_Icon.png" />
+            </div>
         </div>
         <div class="row my-2" id="2sRow">
             <div class="col col-6">
-                <input id="2s" type="text" placeholder="2s rating here: " class="form-control" />
+                <input id="2s" tabindex="1" type="text" placeholder="0" class="form-control" />
             </div>
             <div class="col col-6">
-                <input tabindex="-1" readonly id="2s-output" type="text" class="form-control" placeholder="0" />
+                <input tabindex="4" id="2s-output" type="text" class="form-control" placeholder="0" />
             </div>
         </div>
         <div class="row my-2">
-            <h3>3s</h3>
+            <div class="col col-12 flex-col">
+                <h3>3s</h3>
+                <img class="arena-points-icon" src="./images/Arena_Points_Icon.png" />
+            </div>
         </div>
         <div class="row my-2" id="3sRow">
             <div class="col col-6">
-                <input id="3s" type="text" placeholder="3s rating here: " class="form-control" />
+                <input id="3s" tabindex="2" type="text" placeholder="0" class="form-control" />
             </div>
             <div class="col col-6">
-                <input tabindex="-1" readonly id="3s-output" type="text" class="form-control" placeholder="0" />
+                <input tabindex="5" id="3s-output" type="text" class="form-control" placeholder="0" />
             </div>
         </div>
         <div class="row my-2">
-            <h3>5s</h3>
+            <div class="col col-12 flex-col">
+                <h3>5s</h3>
+                <img class="arena-points-icon" src="./images/Arena_Points_Icon.png" />
+            </div>
         </div>
         <div class="row my-2" id="5sRow">
             <div class="col col-6">
-                <input id="5s" type="text" placeholder="5s rating here: " class="form-control" />
+                <input id="5s" tabindex="3" type="text" placeholder="0" class="form-control" />
             </div>
             <div class="col col-6">
-                <input tabindex="-1" readonly id="5s-output" type="text" class="form-control" placeholder="0" />
+                <input tabindex="6" id="5s-output" type="text" class="form-control" placeholder="0" />
             </div>
         </div>
         <div class="row mt-5">
@@ -82,17 +93,22 @@
     <div class="container mt-1">
         <div class="row">
             <div class="alert alert-warning" id="pointsEligibilityWarning">
-                In order to receive points you must play atleast 10 games and have a minimum rating of 150.
+                <span>
+                    In order to receive points you must play atleast 10 games and have a minimum rating of 150. <br />
+                    The current formula being used is: <math display="inline">Arena Points Earned = 1022 / (1 + 123 * 2.71828 <sup>-0.00412 * Rating</sup>) +
+                        580</math>
+                    <br />
+                    3s bracket receives 88%, 2s bracket receives 76%.
+                </span>
             </div>
         </div>
     </div>
-
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <!-- Calculations -->
+    <!-- Calculations and Event Listeners -->
     <script type="module" src="index.js" defer></script>
 </body>
 
