--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/cd80b2b125.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles.css">
     <link rel="shortcut icon" href="images/favicon.ico" />
     <title>Wrath Social | Arena Point Calculator</title>
@@ -39,7 +40,7 @@
             </div>
         </div>
     </div>
-    <div class="container mt-5" id="arenaCalcWrapper">
+    <div class="container mt-2" id="arenaCalcWrapper">
         <div class="row my-2">
             <div class="col col-12 flex-col">
                 <h3>2s</h3>
@@ -47,11 +48,15 @@
             </div>
         </div>
         <div class="row my-2" id="2sRow">
-            <div class="col col-6">
+            <div class="col col-6 flex-col">
                 <input id="2s" tabindex="1" type="text" placeholder="0" class="form-control" />
             </div>
-            <div class="col col-6">
+            <div class="col col-6 flex-col">
                 <input tabindex="4" id="2s-output" type="text" class="form-control" placeholder="0" />
+                <div>
+                    <i id="increment-2s" class="fa-solid fa-angle-up"></i>
+                    <i id="decrement-2s" class="fa-solid fa-angle-down"></i>
+                </div>
             </div>
         </div>
         <div class="row my-2">
@@ -61,11 +66,15 @@
             </div>
         </div>
         <div class="row my-2" id="3sRow">
-            <div class="col col-6">
+            <div class="col col-6 flex-col">
                 <input id="3s" tabindex="2" type="text" placeholder="0" class="form-control" />
             </div>
-            <div class="col col-6">
+            <div class="col col-6 flex-col">
                 <input tabindex="5" id="3s-output" type="text" class="form-control" placeholder="0" />
+                <div>
+                    <i id="increment-3s" class="fa-solid fa-angle-up"></i>
+                    <i id="decrement-3s" class="fa-solid fa-angle-down"></i>
+                </div>
             </div>
         </div>
         <div class="row my-2">
@@ -75,11 +84,15 @@
             </div>
         </div>
         <div class="row my-2" id="5sRow">
-            <div class="col col-6">
+            <div class="col col-6 flex-col">
                 <input id="5s" tabindex="3" type="text" placeholder="0" class="form-control" />
             </div>
-            <div class="col col-6">
+            <div class="col col-6 flex-col">
                 <input tabindex="6" id="5s-output" type="text" class="form-control" placeholder="0" />
+                <div>
+                    <i id="increment-5s" class="fa-solid fa-angle-up"></i>
+                    <i id="decrement-5s" class="fa-solid fa-angle-down"></i>
+                </div>
             </div>
         </div>
         <div class="row mt-5">
@@ -95,7 +108,8 @@
             <div class="alert alert-warning" id="pointsEligibilityWarning">
                 <span>
                     In order to receive points you must play atleast 10 games and have a minimum rating of 150. <br />
-                    The current formula being used is: <math display="inline">Arena Points Earned = 1022 / (1 + 123 * 2.71828 <sup>-0.00412 * Rating</sup>) +
+                    The current formula being used is: <math display="inline">Arena Points Earned = 1022 / (1 + 123 *
+                        2.71828 <sup>-0.00412 * Rating</sup>) +
                         580</math>
                     <br />
                     3s bracket receives 88%, 2s bracket receives 76%.
